[gd_scene load_steps=27 format=3 uid="uid://d1p05jjgkfwh5"]

[ext_resource type="Script" path="res://src/core/network/manager/enet_manager/enet_client_manager.gd" id="1_klug5"]
[ext_resource type="Script" path="res://src/core/network/manager/NetworkModule.gd" id="1_ksnub"]
[ext_resource type="Script" path="res://src/core/network/manager/enet_manager/manager/channel_manager.gd" id="2_bl0kw"]
[ext_resource type="Script" path="res://src/core/network/manager/enet_manager/manager/ChannelMap.gd" id="3_5koiq"]
[ext_resource type="Script" path="res://src/core/network/manager/enet_manager/manager/packet_manager/packet_manager.gd" id="4_073rg"]
[ext_resource type="Script" path="res://src/core/network/handler/backend_rest/core_heartbeat_handler.gd" id="5_c13kn"]
[ext_resource type="Script" path="res://src/core/network/manager/enet_manager/manager/packet_manager/handler/PacketDispatchHandler.gd" id="6_bjef4"]
[ext_resource type="Script" path="res://src/core/network/handler/backend_rest/core_connection_handler.gd" id="7_j4ttp"]
[ext_resource type="Script" path="res://src/core/network/manager/enet_manager/manager/packet_manager/handler/PacketProcessingHandler.gd" id="7_o868r"]
[ext_resource type="Script" path="res://src/core/network/handler/backend_rest/core_disconnection_handler.gd" id="7_pikf4"]
[ext_resource type="Script" path="res://src/core/network/manager/enet_manager/manager/packet_manager/handler/PacketCreationHandler.gd" id="8_lojbr"]
[ext_resource type="Script" path="res://src/core/network/handler/backend_rest/movement_data_handler.gd" id="8_qu6fe"]
[ext_resource type="Script" path="res://src/core/network/manager/enet_manager/manager/packet_manager/handler/PacketCacheHandler.gd" id="9_eim0s"]
[ext_resource type="Script" path="res://src/core/network/handler/backend_rest/chat_messages_handler.gd" id="9_txqft"]
[ext_resource type="Script" path="res://src/core/network/handler/backend_rest/player_status_update_handler.gd" id="10_6cesx"]
[ext_resource type="Script" path="res://src/core/network/manager/enet_manager/manager/packet_manager/handler/PacketValidationHandler.gd" id="10_kdxs3"]
[ext_resource type="Script" path="res://src/core/network/manager/enet_manager/manager/packet_manager/handler/PacketConverterHandler.gd" id="10_sv2na"]
[ext_resource type="Script" path="res://src/core/network/handler/backend_rest/event_triggered_handler.gd" id="11_wmg4l"]
[ext_resource type="Script" path="res://src/core/network/handler/backend_rest/special_action_handler.gd" id="12_ki30e"]
[ext_resource type="Script" path="res://src/core/network/handler/backend_rest/self_test_channels.gd" id="13_ru1dx"]
[ext_resource type="Script" path="res://src/core/network/handler/backend_rest/auth_login_handler.gd" id="14_ur55w"]
[ext_resource type="Script" path="res://src/game/player_manager/character_manager/network_handler/char_fetch_handler.gd" id="15_dpouu"]
[ext_resource type="Script" path="res://src/game/player_manager/character_manager/network_handler/char_select_handler.gd" id="16_7wkc2"]
[ext_resource type="Script" path="res://src/game/player_manager/player_movement_manager/network_handler/MovementPlayerHandler.gd" id="17_j8iy3"]
[ext_resource type="Script" path="res://src/game/player_manager/player_movement_manager/network_handler/MovementPlayerSyncHandler.gd" id="19_huaql"]
[ext_resource type="Script" path="res://src/core/network/handler/backend_rest/scene_instance_data_handler.gd" id="20_eslj1"]

[node name="Network" type="Node"]
script = ExtResource("1_ksnub")

[node name="Manager" type="Node" parent="."]

[node name="ENetClientManager" type="Node" parent="Manager"]
script = ExtResource("1_klug5")

[node name="ChannelManager" type="Node" parent="Manager"]
script = ExtResource("2_bl0kw")

[node name="ChannelMap" type="Node" parent="Manager/ChannelManager"]
script = ExtResource("3_5koiq")

[node name="PacketManager" type="Node" parent="Manager"]
script = ExtResource("4_073rg")

[node name="PacketDispatchHandler" type="Node" parent="Manager/PacketManager"]
script = ExtResource("6_bjef4")

[node name="PacketProcessingHandler" type="Node" parent="Manager/PacketManager"]
script = ExtResource("7_o868r")

[node name="PacketCreationHandler" type="Node" parent="Manager/PacketManager"]
script = ExtResource("8_lojbr")

[node name="PacketHashHandler" type="Node" parent="Manager/PacketManager"]

[node name="PacketCacheHandler" type="Node" parent="Manager/PacketManager"]
script = ExtResource("9_eim0s")

[node name="PacketConverterHandler" type="Node" parent="Manager/PacketManager"]
script = ExtResource("10_sv2na")

[node name="PacketValidationHandler" type="Node" parent="Manager/PacketManager"]
script = ExtResource("10_kdxs3")

[node name="PacketProcessingUtil" type="Node" parent="Manager/PacketManager"]

[node name="Handler" type="Node" parent="."]

[node name="Core" type="Node" parent="Handler"]

[node name="CoreHeartbeatHandler" type="Node" parent="Handler/Core"]
script = ExtResource("5_c13kn")

[node name="CoreConnectionHandler" type="Node" parent="Handler/Core"]
script = ExtResource("7_j4ttp")

[node name="CoreDisconnectionHandler" type="Node" parent="Handler/Core"]
script = ExtResource("7_pikf4")

[node name="DataHandler" type="Node" parent="Handler/Core"]
script = ExtResource("8_qu6fe")

[node name="ChatMessageHandler" type="Node" parent="Handler/Core"]
script = ExtResource("9_txqft")

[node name="PlayerStatusUpdateHandler" type="Node" parent="Handler/Core"]
script = ExtResource("10_6cesx")

[node name="EventTriggeredHandler" type="Node" parent="Handler/Core"]
script = ExtResource("11_wmg4l")

[node name="SpecialActionHandler" type="Node" parent="Handler/Core"]
script = ExtResource("12_ki30e")

[node name="SelfTestChannelsHandler" type="Node" parent="Handler/Core"]
script = ExtResource("13_ru1dx")

[node name="Auth" type="Node" parent="Handler"]

[node name="AuthLoginHandler" type="Node" parent="Handler/Auth"]
script = ExtResource("14_ur55w")

[node name="Char" type="Node" parent="Handler"]

[node name="CharFetchHandler" type="Node" parent="Handler/Char"]
script = ExtResource("15_dpouu")

[node name="CharSelectHandler" type="Node" parent="Handler/Char"]
script = ExtResource("16_7wkc2")

[node name="Movement" type="Node" parent="Handler"]

[node name="MovementPlayerHandler" type="Node" parent="Handler/Movement"]
script = ExtResource("17_j8iy3")

[node name="MovementPlayerSyncHandler" type="Node" parent="Handler/Movement"]
script = ExtResource("19_huaql")

[node name="Scene" type="Node" parent="Handler"]

[node name="SceneInstanceDataHandler" type="Node" parent="Handler/Scene"]
script = ExtResource("20_eslj1")
